--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row justify-content-md-center">
                 <div class="playstation-devices col-4 col-md-2 mx-md-2">
                     <img src="img/camera-thumb.jpg" alt="">
                 </div>
@@ -283,7 +283,7 @@
         <section class="ps-plus">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-12 col-md-6">
                         <img src="img/ps-plus-logo.png" alt="">
 
                         <p>
@@ -293,6 +293,10 @@
                         <button>
                             Esplora playstation plus
                         </button>
+                    </div>
+
+                    <div class="d-sm-none d-md-inline col-md-6">
+                        <img  src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
                     </div>
                 </div>
             </div>
