Section discounts completed

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             </div>
         </section>
 
-        <section class="ps-plus">
+        <section class="ps-plus mb-5">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12 col-md-6">
@@ -297,6 +297,37 @@
 
                     <div class="d-sm-none d-md-inline col-md-6">
                         <img  src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Sezione uguale section.explore -->
+        <section class="discounts mb-5">
+            <div class="container-fluid">
+                <div class="row text-center">
+                    <div class="col-12">
+                        <h1>
+                            Nuovi sconti sul Playstation store
+                        </h1>
+
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa dolorem iste architecto deserunt iusto beatae saepe ullam inventore illum, minima, consectetur molestiae quis quod placeat pariatur laborum qui vitae? Debitis!
+                        </p>
+                    </div>
+                </div>
+
+                <div class="row p-3">
+                    <div class="col-12 mb-3 col-md-4">
+                        <img src="img/playstation-store-games-under-20-spotlight.jpg" alt="">
+                    </div>
+
+                    <div class="col-12 mb-3 col-md-4">
+                        <img src="img/playstation-store-golden-week-sale-spotlight.jpg" alt="">
+                    </div>
+
+                    <div class="col-12 mb-3 col-md-4">
+                        <img src="img/playstation-store-free-to-play-spotlight.png" alt="">
                     </div>
                 </div>
             </div>
