--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <script src="https://kit.fontawesome.com/a1e151c256.js" crossorigin="anonymous"></script>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -31,7 +33,7 @@
     </header>
 
     <main>
-        <section class="jumbotron text-white mb-3">
+        <section class="jumbotron text-white mb-5">
             <div class="row">
                 <div class="col-12 p-5 col-md-8 col-lg-4">
                     <img src="img/returnal-hero-banner-logo.png" alt="">
@@ -39,7 +41,9 @@
                     <h1>Rompi il cerchio</h1>
 
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam illo, ipsum quas voluptas perferendis adipisci aperiam praesentium deserunt, provident incidunt dolorum reiciendis? Praesentium mollitia dolorum optio nisi architecto, accusamus eum!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam illo, ipsum quas voluptas
+                        perferendis adipisci aperiam praesentium deserunt, provident incidunt dolorum reiciendis?
+                        Praesentium mollitia dolorum optio nisi architecto, accusamus eum!
                     </p>
 
                     <button>
@@ -135,23 +139,23 @@
 
         <!-- Sezione uguale al jumbotron riguardo le caratteristiche -->
         <section class="second-jumbotron text-white">
-                <div class="row p-5">
-                    <div class="col-12 col-md-9 col-lg-6">
-                        <img src="img/it-takes-two-logo.png" alt="">
+            <div class="row p-5">
+                <div class="col-12 col-md-9 col-lg-6">
+                    <img src="img/it-takes-two-logo.png" alt="">
 
-                        <h1>Rompi il cerchio</h1>
+                    <h1>Rompi il cerchio</h1>
 
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam illo, ipsum quas voluptas
-                            perferendis adipisci aperiam praesentium deserunt, provident incidunt dolorum reiciendis?
-                            Praesentium mollitia dolorum optio nisi architecto, accusamus eum!
-                        </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam illo, ipsum quas voluptas
+                        perferendis adipisci aperiam praesentium deserunt, provident incidunt dolorum reiciendis?
+                        Praesentium mollitia dolorum optio nisi architecto, accusamus eum!
+                    </p>
 
-                        <button>
-                            Acquista ora
-                        </button>
-                    </div>
+                    <button>
+                        Acquista ora
+                    </button>
                 </div>
+            </div>
         </section>
 
         <section class="latest-titles mb-5 text-white">
@@ -350,7 +354,7 @@
         </section>
 
         <!-- Sezione uguale a section.pl-plus-->
-        <section class="playstation-now text-white">
+        <section class="playstation-now mb-5 text-white">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12 py-5 my-auto col-md-6">
@@ -384,26 +388,75 @@
                     </div>
                 </div>
 
-                <div class="row">
+                <div class="row social-contacts px-md-5">
                     <div class="col-6 py-2 col-sm-3">
                         <img src="img/twitter.jpg" alt="">
                     </div>
 
                     <div class="col-6 py-2 col-sm-3">
-                        <img src="img/twitter.jpg" alt="">
+                        <img src="img/facebook.jpg" alt="">
                     </div>
 
                     <div class="col-6 py-2 col-sm-3">
-                        <img src="img/twitter.jpg" alt="">
+                        <img src="img/instagram.jpg" alt="">
                     </div>
 
                     <div class="col-6 py-2 col-sm-3">
-                        <img src="img/twitter.jpg" alt="">
+                        <img src="img/youtube.png" alt="">
                     </div>
                 </div>
             </div>
         </section>
     </main>
+
+    <footer>
+        <div class="container-fluid text-white">
+            <div class="row col-4 py-5">
+                <img src="img/ps-footer.svg" alt="">
+
+                <h3<i class="fa-solid fa-globe"></i> Country / Region: Italy</h3>
+            </div>
+
+            <div class="row col-12">
+                <ul class="col-md-4">
+                    <li>Link footer n</li>
+                    <li>Link footer n</li>
+                    <li>Link footer n</li>
+                    <li>Link footer n</li>
+                    <li>Link footer n</li>
+                </ul>
+
+                <ul class="col-md-4">
+                    <li>Link footer n</li>
+                    <li>Link footer n</li>
+                    <li>Link footer n</li>
+                    <li>Link footer n</li>
+                    <li>Link footer n</li>
+                    <li>Link footer n</li>
+                    <li>Link footer n</li>
+                    <li>Link footer n</li>
+                </ul>
+
+                <ul class="col-md-4">
+                    <li>Link footer n</li>
+                    <li>Link footer n</li>
+                    <li>Link footer n</li>
+                </ul>
+            </div>
+
+            <div class="row col-4 py-3">
+                <img src="img/sie-logo.svg" alt="">
+            </div>
+
+            <div class="row col-12">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima fugit, illo, ab inventore architecto
+                    earum odio error alias dolorem ea deserunt aut commodi explicabo ad magni? Quisquam quo voluptatibus
+                    error?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione quae rerum facere dolor
+                    expedita corporis eos inventore hic perferendis! Totam, ducimus quia natus incidunt officia velit?
+                    Atque labore illo nobis?</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
