--- a/index.html
+++ b/index.html
@@ -18,17 +18,84 @@
 <body>
 
     <header>
-        <section class="prenavbar bg-dark text-end">
-            Sony
+        <section class="prenavbar text-white bg-dark text-end">
+            <p>SONY</p>
         </section>
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="img/play_logo.svg" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
 
-                <span class="navbar-toggler-icon"></span>
-            </button>
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Giochi
+                            </a>
+                        </li>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Hardaware
+                            </a>
+                        </li>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Servizi
+                            </a>
+                        </li>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Novità
+                            </a>
+                        </li>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Fai acquisti
+                            </a>
+                        </li>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Supporto
+                            </a>
+                        </li>
+                    </ul>
+
+                    <form class="d-flex align-items-center">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                    My PlayStation
+                                </a>
+                            </li>
+                        </ul>
+                        <button class="btn btn-outline-success mx-3" type="submit">Search</button>
+
+                        <div class="lens-logo d-flex">
+                            <img src="img/lens.svg" alt="">
+                        </div>
+                    </form>
+                </div>
+            </div>
         </nav>
     </header>
 
@@ -101,7 +168,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row align-items-center">
                 <div class="col-12 py-5 col-md-6 px-md-3">
                     Console playstation 5
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ex ducimus accusantium obcaecati
@@ -417,7 +484,7 @@
                 <h3<i class="fa-solid fa-globe"></i> Country / Region: Italy</h3>
             </div>
 
-            <div class="row col-12">
+            <div class="row text-md-center col-12">
                 <ul class="col-md-4">
                     <li>Link footer n</li>
                     <li>Link footer n</li>
