Setting buttons and logos col width

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                 </a>
                             </li>
                         </ul>
-                        <button class="btn btn-outline-success mx-3" type="submit">Search</button>
+                        <button class="btn button-radius bg-dark text-white btn-outline-success mx-3" type="submit">Search</button>
 
                         <div class="lens-logo d-flex">
                             <img src="img/lens.svg" alt="">
@@ -113,7 +113,7 @@
                         Praesentium mollitia dolorum optio nisi architecto, accusamus eum!
                     </p>
 
-                    <button>
+                    <button class="btn-danger button-radius p-1 px-2">
                         Acquista ora
                     </button>
                 </div>
@@ -122,31 +122,35 @@
 
         <section class="titles container-fluid mb-5">
             <div class="row">
+                
+                    <div class="col-6 col-sm-4 col-lg-2 py-2">
+                        <div class="rounded-borders rounded-3">
+                            <img class="rounded-3 p-1" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                        </div>
+                    </div>
+
+
                 <div class="col-6 col-sm-4 col-lg-2 py-2">
-                    <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    <img class="rounded" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
                 </div>
 
                 <div class="col-6 col-sm-4 col-lg-2 py-2">
-                    <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
-                </div>
-
-                <div class="col-6 col-sm-4 col-lg-2 py-2">
-                    <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
-                </div>
-
-
-                <div class="col-6 col-sm-4 col-lg-2 py-2">
-                    <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
-                </div>
-
-
-                <div class="col-6 col-sm-4 col-lg-2 py-2">
-                    <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    <img class="rounded" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
                 </div>
 
 
                 <div class="col-6 col-sm-4 col-lg-2 py-2">
-                    <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    <img class="rounded" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                </div>
+
+
+                <div class="col-6 col-sm-4 col-lg-2 py-2">
+                    <img class="rounded" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                </div>
+
+
+                <div class="col-6 col-sm-4 col-lg-2 py-2">
+                    <img class="rounded" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
                 </div>
             </div>
         </section>
@@ -154,26 +158,33 @@
         <section class="limitless-play mb-5 container-fluid">
             <div class="row text-center">
                 <div class="col-12">
-                    <h5 class="text-uppercase text-primary">
-                        play has no limits
-                    </h5>
+                    <h6 class="text-uppercase text-primary">
+                        Play has no limits
+                    </h6>
 
                     <h1>
-                        Ecco la play 5
+                        Ecco la PlayStation 5
                     </h1>
 
                     <h3>
-                        Tuffati in nuove sfide
+                        Tuffati in nuove possibilità di gioco completamente inaspettate
                     </h3>
                 </div>
             </div>
 
             <div class="row align-items-center">
                 <div class="col-12 py-5 col-md-6 px-md-3">
-                    Console playstation 5
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ex ducimus accusantium obcaecati
-                    dolor! Praesentium voluptatum quis aut quisquam deserunt quae dolor inventore repudiandae
-                    cupiditate! Aperiam soluta accusamus quis saepe.
+                    <h1>
+                        Console PlayStation 5
+                    </h1>
+
+                    <p>
+                        Sperimenta la nuova generazioni di incredibili giochi PlayStation
+                    </p>
+
+                    <button type="button" class="btn button-radius btn-primary btn-sm">
+                        Maggiori informazioni 
+                    </button>
                 </div>
 
                 <div class="big-playstation-image col-12 col-md-6">
@@ -218,7 +229,7 @@
                         Praesentium mollitia dolorum optio nisi architecto, accusamus eum!
                     </p>
 
-                    <button>
+                    <button class="button-radius btn-danger p-1 px-2">
                         Acquista ora
                     </button>
                 </div>
@@ -319,7 +330,7 @@
                             labore pariatur, nisi, autem eos velit fugit?
                         </p>
 
-                        <button>
+                        <button class="btn-primary button-radius p-1 px-2">
                             Scopri di più
                         </button>
                     </div>
@@ -337,7 +348,7 @@
                             labore pariatur, nisi, autem eos velit fugit?
                         </p>
 
-                        <button>
+                        <button class="btn-primary button-radius p-1 px-2">
                             Scopri di più
                         </button>
                     </div>
@@ -355,7 +366,7 @@
                             labore pariatur, nisi, autem eos velit fugit?
                         </p>
 
-                        <button>
+                        <button class="btn-primary button-radius p-1 px-2">
                             Scopri di più
                         </button>
                     </div>
@@ -375,7 +386,7 @@
                             minima. Incidunt suscipit nobis tempora recusandae.
                         </p>
 
-                        <button>
+                        <button class="btn-secondary button-radius p-1 px-2">
                             Esplora playstation plus
                         </button>
                     </div>
@@ -433,8 +444,8 @@
                             minima. Incidunt suscipit nobis tempora recusandae.
                         </p>
 
-                        <button>
-                            Esplora playstation now
+                        <button class="btn-light button-radius p-1 px-2">
+                            Esplora Playstation Now
                         </button>
                     </div>
 
@@ -448,7 +459,7 @@
         <section class="social mb-5">
             <div class="container-fluid">
                 <div class="row text-center">
-                    <div class="col-12">
+                    <div class="col-12 mb-5">
                         <h1>
                             Seguici sui social media
                         </h1>
@@ -478,10 +489,12 @@
 
     <footer>
         <div class="container-fluid text-white">
-            <div class="row col-4 py-5">
+            <div class="row col-4 py-5 col-md-1">
                 <img src="img/ps-footer.svg" alt="">
+            </div>
 
-                <h3<i class="fa-solid fa-globe"></i> Country / Region: Italy</h3>
+            <div class="row col-12 mb-3">
+                <h3><i class="fa-solid fa-globe"></i> Country / Region: Italy</h3>
             </div>
 
             <div class="row text-md-center col-12">
@@ -511,7 +524,7 @@
                 </ul>
             </div>
 
-            <div class="row col-4 py-3">
+            <div class="row col-4 py-3 col-md-2">
                 <img src="img/sie-logo.svg" alt="">
             </div>
 
