Footer ul correction

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
                                 </a>
                             </li>
                         </ul>
-                        <button class="btn button-radius bg-dark text-white btn-outline-success mx-3" type="submit">Search</button>
+                        <button class="btn button-radius bg-dark text-white btn-outline-success mx-1"
+                            type="submit">Search</button>
 
                         <div class="lens-logo d-flex">
                             <img src="img/lens.svg" alt="">
@@ -102,7 +103,7 @@
     <main>
         <section class="jumbotron text-white mb-5">
             <div class="row">
-                <div class="col-12 p-5 col-md-8 col-lg-4">
+                <div class="col-12 p-5 col-md-8 col-lg-6">
                     <img src="img/returnal-hero-banner-logo.png" alt="">
 
                     <h1>Rompi il cerchio</h1>
@@ -120,37 +121,39 @@
             </div>
         </section>
 
-        <section class="titles container-fluid mb-5">
-            <div class="row">
-                
-                    <div class="col-6 col-sm-4 col-lg-2 py-2">
+        <section class="titles mb-5">
+            <div class="container-fluid">
+                <div class="row">
+
+                    <div class="col-6 col-sm-4 col-lg-2">
                         <div class="rounded-borders rounded-3">
                             <img class="rounded-3 p-1" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
                         </div>
                     </div>
 
 
-                <div class="col-6 col-sm-4 col-lg-2 py-2">
-                    <img class="rounded" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
-                </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img class="rounded" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                    </div>
 
-                <div class="col-6 col-sm-4 col-lg-2 py-2">
-                    <img class="rounded" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
-                </div>
-
-
-                <div class="col-6 col-sm-4 col-lg-2 py-2">
-                    <img class="rounded" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
-                </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img class="rounded" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    </div>
 
 
-                <div class="col-6 col-sm-4 col-lg-2 py-2">
-                    <img class="rounded" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
-                </div>
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img class="rounded" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                    </div>
 
 
-                <div class="col-6 col-sm-4 col-lg-2 py-2">
-                    <img class="rounded" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img class="rounded" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    </div>
+
+
+                    <div class="col-6 col-sm-4 col-lg-2">
+                        <img class="rounded" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                    </div>
                 </div>
             </div>
         </section>
@@ -183,7 +186,7 @@
                     </p>
 
                     <button type="button" class="btn button-radius btn-primary btn-sm">
-                        Maggiori informazioni 
+                        Maggiori informazioni
                     </button>
                 </div>
 
@@ -236,7 +239,7 @@
             </div>
         </section>
 
-        <section class="latest-titles mb-5 text-white">
+        <section class="latest-titles mb-5 py-3 text-white">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12">
@@ -489,51 +492,59 @@
 
     <footer>
         <div class="container-fluid text-white">
-            <div class="row col-4 py-5 col-md-1">
-                <img src="img/ps-footer.svg" alt="">
-            </div>
+            <div class="row">
+                <div class="col-12 col-lg-6 py-5">
+                    <img class="col-1 mb-4" src="img/ps-footer.svg" alt="">
+                    <h4><i class="fa-solid fa-globe"></i> Country / Region: Italy</h4>
+                </div>
 
-            <div class="row col-12 mb-3">
-                <h3><i class="fa-solid fa-globe"></i> Country / Region: Italy</h3>
-            </div>
+                <div class="col-12 col-md-4 col-lg-2 py-lg-5">
+                    <ul>
+                        <li>Footer n</li>
+                        <li>Footer n</li>
+                        <li>Footer n</li>
+                        <li>Footer n</li>
+                    </ul>
+                </div>
 
-            <div class="row text-md-center col-12">
-                <ul class="col-md-4">
-                    <li>Link footer n</li>
-                    <li>Link footer n</li>
-                    <li>Link footer n</li>
-                    <li>Link footer n</li>
-                    <li>Link footer n</li>
-                </ul>
+                <div class="col-12 col-md-4 col-lg-2 py-lg-5">
+                    <ul>
+                        <li>Footer n</li>
+                        <li>Footer n</li>
+                        <li>Footer n</li>
+                        <li>Footer n</li>
+                        <li>Footer n</li>
+                        <li>Footer n</li>
+                    </ul>
+                </div>
 
-                <ul class="col-md-4">
-                    <li>Link footer n</li>
-                    <li>Link footer n</li>
-                    <li>Link footer n</li>
-                    <li>Link footer n</li>
-                    <li>Link footer n</li>
-                    <li>Link footer n</li>
-                    <li>Link footer n</li>
-                    <li>Link footer n</li>
-                </ul>
+                <div class="col-12 col-md-4 col-lg-2 py-lg-5">
+                    <ul>
+                        <li>Footer n</li>
+                        <li>Footer n</li>
+                        <li>Footer n</li>
+                        <li>Footer n</li>
+                    </ul>
+                </div>
 
-                <ul class="col-md-4">
-                    <li>Link footer n</li>
-                    <li>Link footer n</li>
-                    <li>Link footer n</li>
-                </ul>
-            </div>
 
-            <div class="row col-4 py-3 col-md-2">
-                <img src="img/sie-logo.svg" alt="">
-            </div>
+            <div class="row ">
+                <div class="col col-4 py-3 col-md-2">
+                    <img src="img/sie-logo.svg" alt="">
+                </div>
 
-            <div class="row col-12">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima fugit, illo, ab inventore architecto
-                    earum odio error alias dolorem ea deserunt aut commodi explicabo ad magni? Quisquam quo voluptatibus
-                    error?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione quae rerum facere dolor
-                    expedita corporis eos inventore hic perferendis! Totam, ducimus quia natus incidunt officia velit?
-                    Atque labore illo nobis?</p>
+                <div class="col col-12">
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima fugit, illo, ab inventore
+                        architecto
+                        earum odio error alias dolorem ea deserunt aut commodi explicabo ad magni? Quisquam quo
+                        voluptatibus
+                        error?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione quae rerum facere dolor
+                        expedita corporis eos inventore hic perferendis! Totam, ducimus quia natus incidunt officia
+                        velit?
+                        Atque labore illo nobis?
+                    </p>
+                </div>
             </div>
         </div>
     </footer>
