--- a/index.html
+++ b/index.html
@@ -198,22 +198,42 @@
             <div class="row justify-content-md-center">
                 <div class="selected-device playstation-devices col-4 col-md-2 mx-md-2">
                     <img src="img/playstation-5-thumb.png" alt="">
+
+                    <p class="text-center">
+                        Console PS5
+                    </p>
                 </div>
 
                 <div class="playstation-devices col-4 col-md-2 mx-md-2">
                     <img src="img/joypad-thumb.png" alt="">
+
+                    <p class="text-center px-2">
+                        Controller wireless DualSense
+                    </p>
                 </div>
 
                 <div class="playstation-devices col-4 col-md-2 mx-md-2">
                     <img src="img/headset-thumb.png" alt="">
+
+                    <p class="text-center px-2">
+                        Cuffie wireless con microfono PULSE 3
+                    </p>
                 </div>
 
                 <div class="playstation-devices col-4 col-md-2 mx-md-2">
                     <img src="img/remote-thumb.png" alt="">
+
+                    <p class="text-center px-2">
+                        Telecomando Media
+                    </p>
                 </div>
 
                 <div class="playstation-devices col-4 col-md-2 mx-md-3">
                     <img src="img/camera-thumb.jpg" alt="">
+
+                    <p class="text-center">
+                        Telecamera HD
+                    </p>
                 </div>
             </div>
         </section>
@@ -252,52 +272,100 @@
                         </h3>
                     </div>
 
-                    <div class="col-6 py-4 col-sm-4 col-lg-2">
+                    <div class="col-6 col-sm-4 col-lg-2">
                         <img class="rounded" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+
+                        <p>
+                            Tony Hawk's Pro Skater 1 + 2
+                        </p>
                     </div>
 
-                    <div class="col-6 py-4 col-sm-4 col-lg-2">
+                    <div class="col-6 col-sm-4 col-lg-2">
                         <img class="rounded" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+
+                        <p>
+                            Crash Bandicoot 4: It's About Time
+                        </p>
                     </div>
 
-                    <div class="col-6 py-4 col-sm-4 col-lg-2">
+                    <div class="col-6 col-sm-4 col-lg-2">
                         <img class="rounded" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+
+                        <p>
+                            Tony Hawk's Pro Skater 1 + 2
+                        </p>
                     </div>
 
-                    <div class="col-6 py-4 col-sm-4 col-lg-2">
+                    <div class="col-6 col-sm-4 col-lg-2">
                         <img class="rounded" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+
+                        <p>
+                            Crash Bandicoot 4: It's About Time
+                        </p>
                     </div>
 
-                    <div class="col-6 py-4 col-sm-4 col-lg-2">
+                    <div class="col-6 col-sm-4 col-lg-2">
                         <img class="rounded" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+
+                        <p>
+                            Tony Hawk's Pro Skater 1 + 2
+                        </p>
                     </div>
 
-                    <div class="col-6 py-4 col-sm-4 col-lg-2">
+                    <div class="col-6 col-sm-4 col-lg-2">
                         <img class="rounded" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+
+                        <p>
+                            Crash Bandicoot 4: It's About Time
+                        </p>
                     </div>
 
-                    <div class="col-6 py-4 col-sm-4 col-lg-2">
+                    <div class="col-6 col-sm-4 col-lg-2">
                         <img class="rounded" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+
+                        <p>
+                            Tony Hawk's Pro Skater 1 + 2
+                        </p>
                     </div>
 
-                    <div class="col-6 py-4 col-sm-4 col-lg-2">
+                    <div class="col-6 col-sm-4 col-lg-2">
                         <img class="rounded" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+
+                        <p>
+                            Crash Bandicoot 4: It's About Time
+                        </p>
                     </div>
 
-                    <div class="col-6 py-4 col-sm-4 col-lg-2">
+                    <div class="col-6 col-sm-4 col-lg-2">
                         <img class="rounded" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+
+                        <p>
+                            Tony Hawk's Pro Skater 1 + 2
+                        </p>
                     </div>
 
-                    <div class="col-6 py-4 col-sm-4 col-lg-2">
+                    <div class="col-6 col-sm-4 col-lg-2">
                         <img class="rounded" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+
+                        <p>
+                            Crash Bandicoot 4: It's About Time
+                        </p>
                     </div>
 
-                    <div class="col-6 py-4 col-sm-4 col-lg-2">
+                    <div class="col-6 col-sm-4 col-lg-2">
                         <img class="rounded" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+
+                        <p>
+                            Tony Hawk's Pro Skater 1 + 2
+                        </p>
                     </div>
 
-                    <div class="col-6 py-4 col-sm-4 col-lg-2">
+                    <div class="col-6 col-sm-4 col-lg-2">
                         <img class="rounded" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+
+                        <p>
+                            Crash Bandicoot 4: It's About Time
+                        </p>
                     </div>
                 </div>
             </div>
@@ -339,7 +407,7 @@
                     </div>
 
                     <div class="col-12 col-md-4">
-                        <img src="img/ps4-slim-homepage-image-block.jpg" alt="">
+                        <img src="img/double11-202010-tw-psvr.jpg" alt="">
 
                         <h1>
                             Playstation 4
@@ -357,7 +425,7 @@
                     </div>
 
                     <div class="col-12 col-md-4">
-                        <img src="img/ps4-slim-homepage-image-block.jpg" alt="">
+                        <img src="img/dualshock-4-listing-thumb.jpg" alt="">
 
                         <h1>
                             Playstation 4
