Hover on devices

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     </p>
                 </div>
 
-                <div class="playstation-devices col-4 col-md-2 mx-md-2">
+                <div class="playstation-devices selected-device-hover col-4 col-md-2 mx-md-2">
                     <img src="img/joypad-thumb.png" alt="">
 
                     <p class="text-center px-2">
@@ -212,7 +212,7 @@
                     </p>
                 </div>
 
-                <div class="playstation-devices col-4 col-md-2 mx-md-2">
+                <div class="playstation-devices selected-device-hover col-4 col-md-2 mx-md-2">
                     <img src="img/headset-thumb.png" alt="">
 
                     <p class="text-center px-2">
@@ -220,7 +220,7 @@
                     </p>
                 </div>
 
-                <div class="playstation-devices col-4 col-md-2 mx-md-2">
+                <div class="playstation-devices selected-device-hover col-4 col-md-2 mx-md-2">
                     <img src="img/remote-thumb.png" alt="">
 
                     <p class="text-center px-2">
@@ -228,7 +228,7 @@
                     </p>
                 </div>
 
-                <div class="playstation-devices col-4 col-md-2 mx-md-3">
+                <div class="playstation-devices selected-device-hover col-4 col-md-2 mx-md-3">
                     <img src="img/camera-thumb.jpg" alt="">
 
                     <p class="text-center">
@@ -246,7 +246,7 @@
 
                     <h1>Rompi il cerchio</h1>
 
-                    <p>
+                    <p class="py-4">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam illo, ipsum quas voluptas
                         perferendis adipisci aperiam praesentium deserunt, provident incidunt dolorum reiciendis?
                         Praesentium mollitia dolorum optio nisi architecto, accusamus eum!
@@ -451,7 +451,7 @@
                     <div class="col-12 py-5 my-auto col-md-6">
                         <img src="img/ps-plus-logo.png" alt="">
 
-                        <p>
+                        <p class="py-4">
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem, beatae! Nesciunt,
                             qui, error facere amet adipisci, libero reiciendis fugiat distinctio ad nihil odit ut
                             minima. Incidunt suscipit nobis tempora recusandae.
@@ -509,7 +509,7 @@
                     <div class="col-12 py-5 my-auto col-md-6">
                         <img src="img/ps-now-logo-two-column.png" alt="">
 
-                        <p>
+                        <p class="py-4">
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem, beatae! Nesciunt,
                             qui, error facere amet adipisci, libero reiciendis fugiat distinctio ad nihil odit ut
                             minima. Incidunt suscipit nobis tempora recusandae.
